--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,10 @@
         "outDir": "./dist/",
         "noImplicitAny": true,
         "module": "ES2020",
-        "target": "ES2020",
+        "target": "ES2016",
         "jsx": "preserve",
         "allowJs": false,
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "sourceMap": true
     }
 }
