--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ultra3-engine",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "example/index.ts",
   "scripts": {
     "start": "webpack serve",
     "build:server": "webpack build --config webpack.server.config.js"
@@ -18,7 +18,9 @@
     "@types/websocket": "^1.0.5",
     "babylonjs": "^4.2.0",
     "ts-loader": "^9.2.6",
+    "ts-shader-loader": "^1.0.6",
     "typescript": "^4.5.4",
-    "webpack": "^5.65.0"
+    "webpack-dev-server": "^4.9.3",
+    "webpack": "^5.73.0"
   }
 }
