--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
         "outDir": "./dist/",
         "noImplicitAny": true,
         "module": "ES2020",
-        "target": "ES2017",
+        "target": "ES2021",
         "jsx": "preserve",
-        "allowJs": false,
+        "allowJs": true,
         "moduleResolution": "node",
         "sourceMap": true
     }
