--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "jsx": "preserve",
         "allowJs": true,
         "moduleResolution": "node",
+        "noImplicitThis": true,
         "sourceMap": true
     }
 }
