--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ultra3-engine",
   "version": "1.0.0",
   "description": "",
-  "main": "example/index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "start": "webpack serve",
     "build:server": "webpack build --config webpack.server.config.js"
@@ -19,8 +19,8 @@
     "babylonjs": "^4.2.0",
     "ts-loader": "^9.2.6",
     "ts-shader-loader": "^2.0.2",
-    "typescript": "^4.5.4",
-    "webpack-dev-server": "^4.9.3",
-    "webpack": "^5.76.0"
+    "typescript": "^4.9.5",
+    "webpack": "^5.76.0",
+    "webpack-dev-server": "^4.9.3"
   }
 }
