--- a/package.json
+++ b/package.json
@@ -5,22 +5,28 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "webpack serve",
-    "build:server": "webpack build --config webpack.server.config.js"
+    "build:server": "webpack build --config webpack.server.config.js",
+    "test": "jest --detectOpenHandles"
   },
   "author": "DungyBug",
   "license": "ISC",
   "dependencies": {
-    "websocket": "^1.0.34"
+    "ts-jest": "^29.1.0",
+    "ts-shader-loader": "^2.0.2",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/babylonjs": "^2.4.1",
+    "@types/jest": "^29.5.1",
     "@types/node": "^17.0.21",
     "@types/websocket": "^1.0.5",
     "babylonjs": "^4.2.0",
+    "jest": "^29.5.0",
     "ts-loader": "^9.2.6",
-    "ts-shader-loader": "^2.0.2",
-    "typescript": "^4.9.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
     "webpack": "^5.76.0",
+    "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.9.3"
   }
 }
