--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,25 @@
 {
     "compilerOptions": {
         "outDir": "./dist/",
-        "noImplicitAny": true,
         "module": "ES2020",
         "target": "ES2020",
         "jsx": "preserve",
         "allowJs": true,
         "moduleResolution": "node",
         "noImplicitThis": true,
+        "noImplicitAny": true,
+        "allowUnreachableCode": false,
+        "alwaysStrict": true,
+        "exactOptionalPropertyTypes": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
+        "noPropertyAccessFromIndexSignature": false,
+        "noUncheckedIndexedAccess": true,
+        "strictBindCallApply": true,
+        "strictFunctionTypes": true,
+        "strictNullChecks": true,
+        "strictPropertyInitialization": true,
+        "useUnknownInCatchVariables": true,
         "sourceMap": true
     }
 }
