--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/websocket": "^1.0.5",
     "babylonjs": "^4.2.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^2.8.8",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
