--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babylonjs": "^4.2.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
     "prettier": "^2.8.8",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.9.1",
